<resources>
    <string name="app_name">Cashier</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">@string/register</string>
    <string name="title_activity_login">@string/action_sign_in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="password_confirm">Password Confirm</string>
    <string name="error_passwords_not_consistent">Passwords are not consistent!</string>
    <string name="login_with_qq">Login with QQ</string>
    <string name="user_name">User Name</string>
    <string name="sign_in">Sign in</string>
    <string name="sure_to_logout">Are you sure you want to log out?</string>
    <string name="loading_user_info">Loading User info……</string>
    <string name="title_activity_goods_info">Purchase</string>
    <string name="goods_name">Name Of Goods</string>
    <string name="purchase_quantity">Quantity</string>
    <string name="save">Save</string>
    <string name="error_no_counts">Purchase count is required</string>
    <string name="purchase_price">Purchase Price</string>
    <string name="error_price_invalidate">Price must greater than 0</string>
    <string name="error_quantity_invalidate">Quantity must greater than 0</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_picture">Select Picture</string>
    <string name="changing_avatar">Avatar Alerting……</string>

    <array name="array_item_change_avatar_dialog">
        <item>@string/take_photo</item>
        <item>@string/select_picture</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="goods_list">Goodses</string>
    <string name="title_activity_goods_list">商品列表</string>
</resources>
